// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Spinner Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <div
      class="sc-gKckTs jhmBNr sc-iCfLBT dUnJKd sc-hGPAah lctuxY sc-cbTAsW iEIgOD"
    >
      <div
        class="sc-lkgURy ldlcvd"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Spinner Emphasized 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <div
      class="sc-gKckTs jhmBNr sc-iCfLBT dUnJKd sc-hGPAah ikFruI sc-cbTAsW iEIgOD"
    >
      <div
        class="sc-lkgURy hplPIT"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Spinner With Children 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <div
      class="sc-jlRMkV bPbltX sc-cbTAsW iEIgOD"
    >
      <div
        class="sc-gKckTs jhmBNr sc-iCfLBT gEsLGl sc-hGPAah sc-dUbuoE hNpYyk ioQBJk"
      >
        <div
          class="sc-gKckTs jhmBNr sc-iCfLBT dUnJKd sc-hGPAah lctuxY"
        >
          <div
            class="sc-lkgURy ldlcvd"
          />
          <div
            class="sc-fKVsgm hjxFYR sc-bBHwJV jWiGwV"
          >
            Spinning...
          </div>
        </div>
      </div>
      <div
        class="sc-htJSpn kilLsc"
      >
        <div
          class="sc-gKckTs jhmBNr sc-iCfLBT iDIfht"
          style="background-color: rgb(248, 249, 253);"
        >
          Spinning, the wrapped children are made opaque
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Spinner With Component Label 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <div
      class="sc-gKckTs jhmBNr sc-iCfLBT dUnJKd sc-hGPAah lctuxY sc-cbTAsW iEIgOD"
    >
      <div
        class="sc-lkgURy ldlcvd"
      />
      <div
        class="sc-fKVsgm hjxFYR sc-bBHwJV jWiGwV"
      >
        <div
          class="sc-fKVsgm hjxFYR sc-bBHwJV oPLvJ"
        >
          Building image 
          <button
            class="StyledButton-sc-323bzc-0 fuujoU sc-bqiQRQ sc-bkkfTU dZBHzy bUNeAL sc-dJjZJu bJNpNW"
            type="button"
          >
            12345
          </button>
          ...
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Spinner With Label 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <div
      class="sc-gKckTs jhmBNr sc-iCfLBT dUnJKd sc-hGPAah lctuxY sc-cbTAsW iEIgOD"
    >
      <div
        class="sc-lkgURy ldlcvd"
      />
      <div
        class="sc-fKVsgm hjxFYR sc-bBHwJV jWiGwV"
      >
        Spinning...
      </div>
    </div>
  </div>
</div>
`;
